2013-08-20  Antti Koivisto  <antti@apple.com>

        <https://webkit.org/b/120078> Replace NodeRenderingContext with RenderStyle& as shouldCreateRenderer() argument

        Reviewed by Darin Adler.

        This simplifies the code. NodeRenderingContext was only used for getting the RenderStyle.

        * dom/Element.cpp:
        (WebCore::Element::rendererIsNeeded):
        * dom/Element.h:
        * dom/NodeRenderingContext.cpp:
        (WebCore::NodeRenderingContext::elementInsideRegionNeedsRenderer):
        (WebCore::NodeRenderingContext::createRendererForElementIfNeeded):
        * dom/PseudoElement.cpp:
        (WebCore::PseudoElement::rendererIsNeeded):
        * dom/PseudoElement.h:
        * html/HTMLAppletElement.cpp:
        (WebCore::HTMLAppletElement::rendererIsNeeded):
        * html/HTMLAppletElement.h:
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::rendererIsNeeded):
        * html/HTMLElement.h:
        * html/HTMLEmbedElement.cpp:
        (WebCore::HTMLEmbedElement::rendererIsNeeded):
        * html/HTMLEmbedElement.h:
        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::rendererIsNeeded):
        * html/HTMLFormElement.h:
        * html/HTMLFrameElement.cpp:
        (WebCore::HTMLFrameElement::rendererIsNeeded):
        * html/HTMLFrameElement.h:
        * html/HTMLFrameSetElement.cpp:
        (WebCore::HTMLFrameSetElement::rendererIsNeeded):
        * html/HTMLFrameSetElement.h:
        * html/HTMLIFrameElement.cpp:
        (WebCore::HTMLIFrameElement::rendererIsNeeded):
        * html/HTMLIFrameElement.h:
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::rendererIsNeeded):
        * html/HTMLInputElement.h:
        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::rendererIsNeeded):
        * html/HTMLMediaElement.h:
        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::rendererIsNeeded):
        * html/HTMLObjectElement.h: