@@ -59,8 +59,6 @@ namespace WebCore {
 
         PassRefPtr<FileList> files() const;
 
-        bool hasData();
-
         void clearData(const String& type);
         void clearData();
 
@@ -84,6 +82,8 @@ namespace WebCore {
 #if ENABLE(DRAG_SUPPORT)
         static PassRefPtr<Clipboard> createForDragAndDrop();
         static PassRefPtr<Clipboard> createForDragAndDrop(ClipboardAccessPolicy, const DragData&);
+
+        bool hasData();
 
         bool dropEffectIsUninitialized() const { return m_dropEffect == "uninitialized"; }
 
